# tamayotchi

./: .gitignore  AGENTS.md  Dockerfile  README.md  eslint.config.mjs  mix.exs  package-lock.json  package.json  vite.config.ts
.kamal/: secrets
assets/css/: app.css  provider.css  salary.css
assets/js/: app.js  salary_counter.js
config/: config.exs  deploy.yml  dev.exs  prod.exs  runtime.exs  test.exs
lib/: tamayotchi.ex  tamayotchi_web.ex
lib/tamayotchi/: application.ex  blog.ex  portfolio_data.ex  portfolio_data_fetcher.ex  project.ex  projects.ex
lib/tamayotchi_web/: endpoint.ex  formatters.ex  portfolio_access.ex  router.ex  telemetry.ex
priv/data/: data.json
priv/projects/: 01-codtracker-bot.md  02-whatsapp-reminders.md  03-tamayotchi-portfolio-os.md  04-robert.md  04-zapenu.md  05-prezio.md  05-robert.md  06-prezio.md  07-instaleap.md
priv/resume-generator/: .gitignore  resume.tex
priv/static/: index.html
src/: App.tsx  Retro.tsx  index.css  types.ts
src/components/: BlogList.tsx  BlogListPresentation.tsx  BlogPost.tsx  BlogPostPresentation.tsx  ChartCard.tsx  HistoryCard.tsx  KanbanBoard.tsx  PortfolioChart.tsx  Resume.tsx  SalaryCounter.tsx  Todo.tsx
src/data/: data.json  index.ts
src/hooks/: useInvestmentData.ts
src/types/: blog.ts  index.ts
src/utils/: blog.ts  formatters.ts
tamayotchi/: index.html  package.json
tamayotchi/src/: App.tsx  Retro.tsx
tamayotchi/workers/update-investment-data/: Cargo.toml  package-lock.json
tamayotchi/workers/update-investment-data/src/: lib.rs
test/support/: conn_case.ex
(+43 files in other folders)
