[package]
name = "update-investment-data"
version = "0.1.0"
edition = "2021"
authors = [ "Juantamayo26 <juancyepest@gmail.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.5.0", features=['http'] }
worker-macros = { version="0.5.0", features=['http'] }
console_error_panic_hook = { version = "0.1.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
strum = "0.27"
strum_macros = "0.27"
chrono = { version = "0.4", default-features = false }
chrono-tz = { version = "0.5", default-features = false }
